Testing master file

--- a/mkstowe/templates/skills.html
+++ b/mkstowe/templates/skills.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta content="width=device-width, initial-scale=1" name="viewport">
-    <meta content="Home/About page for Michael Stowe." name="Description">
-    <title>Home | Michael Stowe</title>
+    <meta content="Skills page for Michael Stowe." name="Description">
+    <title>Skills | Michael Stowe</title>
 
     <link rel="icon" href="{{ url_for('static', filename='media/favicon.png') }}">
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/main.css') }}">
@@ -46,8 +46,9 @@
 </div>
 
 <nav class="menu">
-    <a class="item_menu" href="/" id="current">Home</a>
-    <a class="item_menu" href="/skills/">Skills</a>
+    <a class="item_menu" href="/">Home</a>
+    <a class="item_menu" href="/skills/" id="current">Skills</a>
+    <a class="item_menu" href="/resume/">Résumé</a>
     <a class="item_menu" href="/code/">Code</a>
     <a class="item_menu" href="/living_arts/">Living Arts</a>
     <div id="socials">
@@ -61,27 +62,36 @@
 </nav>
 
 <main>
-    <h2>About Me</h2>
-    <p>Hi, I'm Michael. I'm currently a Senior at the University of Michigan
-        studying Computer Science. I am working toward my goal of applying my
-        knowledge of computer science to the machine learning industry, focusing on
-        studying human behavior to devise programs that can help better society. During
-        my time in college, I strive to gain skills and experience by working on
-        projects that are related to coding and engineering in general, as well as
-        honing the skills that apply more to my creative side.</p>
-    <br>
-    <h2>Here's some more information about me that you didn't ask for:</h2>
+    <h2>Languages</h2>
     <ul>
-        <li>I have a cat named Frankie</li>
-        <li>I love all things horror</li>
-        <li>I occasionally eat peanut butter straight from the jar</li>
-        <li>I think that birds are the best category of animal</li>
-        <li>I can say (with at least some accuracy) "I eat small children" in
-            eleven languages</li>
-        <li>I despise hot weather</li>
-        <li>I listen to a lot of metal and punk music</li>
-        <li>I play guitar</li>
-        <li>I can't whistle</li>
+        <li>C/C++/C#</li>
+        <li>Python</li>
+        <li>HTML/CSS</li>
+        <li>JavaScript</li>
+        <li>PHP</li>
+        <li>SQL</li>
+        <li>Java/Kotlin</li>
+        <li>Go</li>
+    </ul>
+    <h2>Software</h2>
+    <ul>
+        <li>Unity</li>
+        <li>Linux systems</li>
+        <li>Wordpress</li>
+        <li>Git</li>
+        <li>JetBrains IDEs</li>
+        <li>Visual Studio/VS Code</li>
+        <li>Android Studio</li>
+        <li>Jira</li>
+        <li>Adobe Creative Suite</li>
+        <li>GIMP</li>
+    </ul>
+    <h2>Other Skills</h2>
+    <ul>
+        <li>Problem Solving</li>
+        <li>Creativity</li>
+        <li>Leadership</li>
+        <li>Keeping plants alive</li>
     </ul>
 </main>
 
