--- a/mkstowe/templates/master.html
+++ b/mkstowe/templates/master.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta content="width=device-width, initial-scale=1" name="viewport">
-    <meta content="Home/About page for Michael Stowe." name="Description">
-    <title>Home | Michael Stowe</title>
+    <meta content="{{ desc }}" name="Description">
+    <title>{{ title }}</title>
 
     <link rel="icon" href="{{ url_for('static', filename='media/favicon.png') }}">
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/main.css') }}">
@@ -15,11 +15,10 @@
 
     <script src="https://kit.fontawesome.com/2365367118.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-    <script src="main.js" type="text/javascript"></script>
+    <script src="{{ url_for('static', filename='js/main.js') }}" type="text/javascript"></script>
 
     <!-- Global site tag (gtag.js) - Google Analytics -->
-    <script async
-            src="https://www.googletagmanager.com/gtag/js?id=UA-143308122-1"></script>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-143308122-1"></script>
     <script>
         window.dataLayer = window.dataLayer || [];
 
@@ -29,6 +28,12 @@
 
         gtag('js', new Date());
         gtag('config', 'UA-143308122-1');
+    </script>
+
+    <script>
+        $(document).ready(function(){
+            $('main').load("{{ load_file }}");
+        });
     </script>
 </head>
 
@@ -46,10 +51,10 @@
 </div>
 
 <nav class="menu">
-    <a class="item_menu" href="/" id="current">Home</a>
+    <a class="item_menu" href="/">Home</a>
     <a class="item_menu" href="/skills/">Skills</a>
-    <a class="item_menu" href="/code/">Code</a>
-    <a class="item_menu" href="/living_arts/">Living Arts</a>
+    <a class="item_menu" href="/projects/">Projects</a>
+    <a class="item_menu" href="/experience/">Experience</a>
     <div id="socials">
         <a class="item_menu" href="mailto:michaelstowe12@gmail.com" id="email" rel="noreferrer" target="_blank">
             <i class="fa fa-envelope"></i>
@@ -60,30 +65,17 @@
     </div>
 </nav>
 
-<main>
-    <h2>About Me</h2>
-    <p>Hi, I'm Michael. I'm currently a Senior at the University of Michigan
-        studying Computer Science. I am working toward my goal of applying my
-        knowledge of computer science to the machine learning industry, focusing on
-        studying human behavior to devise programs that can help better society. During
-        my time in college, I strive to gain skills and experience by working on
-        projects that are related to coding and engineering in general, as well as
-        honing the skills that apply more to my creative side.</p>
-    <br>
-    <h2>Here's some more information about me that you didn't ask for:</h2>
-    <ul>
-        <li>I have a cat named Frankie</li>
-        <li>I love all things horror</li>
-        <li>I occasionally eat peanut butter straight from the jar</li>
-        <li>I think that birds are the best category of animal</li>
-        <li>I can say (with at least some accuracy) "I eat small children" in
-            eleven languages</li>
-        <li>I despise hot weather</li>
-        <li>I listen to a lot of metal and punk music</li>
-        <li>I play guitar</li>
-        <li>I can't whistle</li>
-    </ul>
-</main>
+<script>
+    $('.menu a').each(function(){
+        if ( this.textContent === {{ title }}) {
+            this.attr('id', 'current');
+        } else {
+            this.removeAttr('id');
+        }
+    });
+</script>
+
+<main></main>
 
 <footer id="copyright">
     <p>&copy; {{ now.year }} Michael Stowe</p>
