--- a/mkstowe/templates/index.html
+++ b/mkstowe/templates/index.html
@@ -1,66 +1,66 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta content="width=device-width, initial-scale=1" name="viewport">
-    <meta content="Home/About page for Michael Stowe." name="Description">
-    <title>Home | Michael Stowe</title>
+<!--<!DOCTYPE html>-->
+<!--<html lang="en">-->
+<!--<head>-->
+<!--    <meta charset="UTF-8">-->
+<!--    <meta content="width=device-width, initial-scale=1" name="viewport">-->
+<!--    <meta content="Home/About page for Michael Stowe." name="Description">-->
+<!--    <title>Home | Michael Stowe</title>-->
 
-    <link rel="icon" href="{{ url_for('static', filename='media/favicon.png') }}">
-    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/main.css') }}">
-    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/normalize.css') }}">
+<!--    <link rel="icon" href="{{ url_for('static', filename='media/favicon.png') }}">-->
+<!--    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/main.css') }}">-->
+<!--    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/normalize.css') }}">-->
 
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <link href="/manifest.json" rel="manifest">
+<!--    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">-->
+<!--    <link href="/manifest.json" rel="manifest">-->
 
-    <script src="https://kit.fontawesome.com/2365367118.js"></script>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-    <script src="main.js" type="text/javascript"></script>
+<!--    <script src="https://kit.fontawesome.com/2365367118.js"></script>-->
+<!--    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>-->
+<!--    <script src="main.js" type="text/javascript"></script>-->
 
-    <!-- Global site tag (gtag.js) - Google Analytics -->
-    <script async
-            src="https://www.googletagmanager.com/gtag/js?id=UA-143308122-1"></script>
-    <script>
-        window.dataLayer = window.dataLayer || [];
+<!--    &lt;!&ndash; Global site tag (gtag.js) - Google Analytics &ndash;&gt;-->
+<!--    <script async-->
+<!--            src="https://www.googletagmanager.com/gtag/js?id=UA-143308122-1"></script>-->
+<!--    <script>-->
+<!--        window.dataLayer = window.dataLayer || [];-->
 
-        function gtag() {
-            dataLayer.push(arguments);
-        }
+<!--        function gtag() {-->
+<!--            dataLayer.push(arguments);-->
+<!--        }-->
 
-        gtag('js', new Date());
-        gtag('config', 'UA-143308122-1');
-    </script>
-</head>
+<!--        gtag('js', new Date());-->
+<!--        gtag('config', 'UA-143308122-1');-->
+<!--    </script>-->
+<!--</head>-->
 
-<body>
-<header>
-    <h1><a class="title" href="/">Michael Stowe</a></h1>
+<!--<body>-->
+<!--<header>-->
+<!--    <h1><a class="title" href="/">Michael Stowe</a></h1>-->
 
-    <div class="top">
-        <a class="menu_icon" href="#"><i class="material-icons">dehaze</i></a>
-    </div>
-</header>
+<!--    <div class="top">-->
+<!--        <a class="menu_icon" href="#"><i class="material-icons">dehaze</i></a>-->
+<!--    </div>-->
+<!--</header>-->
 
-<div class="icon">
-    <a href="/"><img alt="Home icon" src="{{ url_for('static', filename='media/terminal.svg') }}"/></a>
-</div>
+<!--<div class="icon">-->
+<!--    <a href="/"><img alt="Home icon" src="{{ url_for('static', filename='media/terminal.svg') }}"/></a>-->
+<!--</div>-->
 
-<nav class="menu">
-    <a class="item_menu" href="/" id="current">Home</a>
-    <a class="item_menu" href="/skills/">Skills</a>
-    <a class="item_menu" href="/code/">Code</a>
-    <a class="item_menu" href="/living_arts/">Living Arts</a>
-    <div id="socials">
-        <a class="item_menu" href="mailto:michaelstowe12@gmail.com" id="email" rel="noreferrer" target="_blank">
-            <i class="fa fa-envelope"></i>
-        </a>
-        <a class="item_menu" href="https://linkedin.com/in/mkstowe" id="linkedin" rel="noreferrer" target="_blank">
-            <i class="fab fa-linkedin-in"></i>
-        </a>
-    </div>
-</nav>
+<!--<nav class="menu">-->
+<!--    <a class="item_menu" href="/" id="current">Home</a>-->
+<!--    <a class="item_menu" href="/skills/">Skills</a>-->
+<!--    <a class="item_menu" href="/code/">Code</a>-->
+<!--    <a class="item_menu" href="/living_arts/">Living Arts</a>-->
+<!--    <div id="socials">-->
+<!--        <a class="item_menu" href="mailto:michaelstowe12@gmail.com" id="email" rel="noreferrer" target="_blank">-->
+<!--            <i class="fa fa-envelope"></i>-->
+<!--        </a>-->
+<!--        <a class="item_menu" href="https://linkedin.com/in/mkstowe" id="linkedin" rel="noreferrer" target="_blank">-->
+<!--            <i class="fab fa-linkedin-in"></i>-->
+<!--        </a>-->
+<!--    </div>-->
+<!--</nav>-->
 
-<main>
+<!--<main>-->
     <h2>About Me</h2>
     <p>Hi, I'm Michael. I'm currently a Senior at the University of Michigan
         studying Computer Science. I am working toward my goal of applying my
@@ -83,10 +83,10 @@
         <li>I play guitar</li>
         <li>I can't whistle</li>
     </ul>
-</main>
+<!--</main>-->
 
-<footer id="copyright">
-    <p>&copy; {{ now.year }} Michael Stowe</p>
-</footer>
-</body>
-</html>
+<!--<footer id="copyright">-->
+<!--    <p>&copy; {{ now.year }} Michael Stowe</p>-->
+<!--</footer>-->
+<!--</body>-->
+<!--</html>-->
