--- a/mkstowe/templates/master.html
+++ b/mkstowe/templates/master.html
@@ -66,14 +66,16 @@
 </nav>
 
 <script>
-    $('.item_menu').each(function(index, value){
-        console.log(`ahhh${index}: ${value}`);
-        if ( this.textContent === "{{ title }}") {
-            this.attr('id', 'current');
-            console.log("here");
-        } else {
-            this.removeAttr('id');
-        }
+    $(document).ready(function() {
+        $('.item_menu').each(function (index, value) {
+            console.log(`ahhh${index}: ${value}`);
+            if (this.textContent === "{{ title }}") {
+                $(this).attr('id', 'current');
+                console.log("here");
+            } else {
+                this.removeAttr('id');
+            }
+        });
     });
 </script>
 
