Attempting with skills

--- a/mkstowe/templates/master.html
+++ b/mkstowe/templates/master.html
@@ -61,13 +61,9 @@
 
 <script>
     $(document).ready(function() {
-        $('.item_menu').each(function (index, value) {
-            console.log(`ahhh${index}: ${value}`);
+        $('.item_menu').each(function () {
             if (this.textContent === "{{ title }}") {
                 $(this).attr('id', 'current');
-                console.log("here");
-            } else {
-                $(this).removeAttr('id');
             }
         });
     });
