--- a/mkstowe/templates/experience.html
+++ b/mkstowe/templates/experience.html
@@ -1,71 +1,52 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta content="width=device-width, initial-scale=1" name="viewport">
-    <meta content="Experience page for Michael Stowe." name="Description">
-    <title>Experience | Michael Stowe</title>
+<h2 id="work_leadership">Work and Leadership</h2>
+<h3><strong>University of Michigan</strong> - Web Developer</h3>
+<h4>NOVEMBER 2019 - PRESENT | Ann Arbor, MI</h4>
+<ul>
+    <li>Developed and maintained a WordPress website for the Michigan Materials Research Institute
+        within the University of Michigan.</li>
+    <li>Implemented features for user interactivity using HTML, CSS, JavaScript, and PHP.</li>
+    <li>See more in the <a href="/projects/#mmri">projects page</a></li>
+</ul>
+<h3><strong>Culver Academies</strong> - Coding Instructor</h3>
+<h4>MAY 2019 - AUGUST 2019 | Culver, IN</h4>
+<ul>
+    <li>Taught three classes to high school students featuring topics in Python programming and web development.</li>
+    <li>Gave lectures and created projects to lead students through the fundamentals of Python and basic object-oriented
+        programming.</li>
+    <li>Led interactive lessons to guide students through the process of creating a simple personal website.</li>
+</ul>
+<h3><strong>Living Arts</strong> - Peer Mentor</h3>
+<h4>AUGUST 2018 - APRIL 2019 | University of Michigan Arts Engine | Ann Arbor, MI</h4>
+<ul>
+    <li>Led a group of students through interdisciplinary projects and workshops.</li>
+    <li>Provided information and resources to current and incoming students.</li>
+    <li>Led recruitment events to gauge interest for following semesters.</li>
+</ul>
+<h3><strong>Brandywine School District</strong> - IT Intern</h3>
+<h4>AUGUST 2016 - AUGUST 2017 | Niles, MI</h4>
+<ul>
+    <li>Troubleshot technology-related issues for students and staff of three schools and an administration building.</li>
+    <li>Set up enterprise networks for school computers.</li>
+    <li>Set up hardware and software for school computers.</li>
+</ul>
+<h3><strong>C & S Machine Tool Inc.</strong> - Team Member</h3>
+<h4>JUNE 2016 - AUGUST 2016 | Niles, MI</h4>
+<ul>
+    <li>Produced metal parts for medical and aerospace industries, among others.</li>
+    <li>Operated CNC and manual machinery such as mills, lathes, and laser engravers.</li>
+    <li>Inspected and provided quality control of parts.</li>
+</ul>
 
-    <link rel="icon" href="{{ url_for('static', filename='media/favicon.png') }}">
-    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/main.css') }}">
-    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/normalize.css') }}">
-
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <link href="/manifest.json" rel="manifest">
-
-    <script src="https://kit.fontawesome.com/2365367118.js"></script>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-    <script src="main.js" type="text/javascript"></script>
-
-    <!-- Global site tag (gtag.js) - Google Analytics -->
-    <script async
-            src="https://www.googletagmanager.com/gtag/js?id=UA-143308122-1"></script>
-    <script>
-        window.dataLayer = window.dataLayer || [];
-
-        function gtag() {
-            dataLayer.push(arguments);
-        }
-
-        gtag('js', new Date());
-        gtag('config', 'UA-143308122-1');
-    </script>
-</head>
-
-<body>
-<header>
-    <h1><a class="title" href="/">Michael Stowe</a></h1>
-
-    <div class="top">
-        <a class="menu_icon" href="#"><i class="material-icons">dehaze</i></a>
-    </div>
-</header>
-
-<div class="icon">
-    <a href="/"><img alt="Home icon" src="{{ url_for('static', filename='media/terminal.svg') }}"/></a>
-</div>
-
-<nav class="menu">
-    <a class="item_menu" href="/" >Home</a>
-    <a class="item_menu" href="/skills/">Skills</a>
-    <a class="item_menu" href="/experience/" id="current">Experience</a>
-    <a class="item_menu" href="/living_arts/">Living Arts</a>
-    <div id="socials">
-        <a class="item_menu" href="mailto:michaelstowe12@gmail.com" id="email" rel="noreferrer" target="_blank">
-            <i class="fa fa-envelope"></i>
-        </a>
-        <a class="item_menu" href="https://linkedin.com/in/mkstowe" id="linkedin" rel="noreferrer" target="_blank">
-            <i class="fab fa-linkedin-in"></i>
-        </a>
-    </div>
-</nav>
-
-<main>
-
-</main>
-
-<footer id="copyright">
-    <p>&copy; {{ now.year }} Michael Stowe</p>
-</footer>
-</body>
-</html>
+<h2 id="education">Education</h2>
+<h3>University of Michigan | Ann Arbor, MI</h3>
+<h4>Graduation: MAY 2021 | B.S.E Computer Science</h4>
+<p>Relevant Courses:</p>
+<p>EECS 494 - Computer Game Design and Development</p>
+<p>EECS 485 - Web Systems</p>
+<p>EECS 498 - Applied Machine Learning for Affective Computing</p>
+<p>EECS 481 - Software Engineering</p>
+<p>EECS 388 - Intro to Computer Security</p>
+<p>EECS 376 - Foundations of Computer Science</p>
+<p>EECS 370 - Intro to Computer Organization</p>
+<p>EECS 281 - Data Structures and Algorithms</p>
+<p>EECS 215 - Intro to Electronic Circuits</p>
