--- a/mkstowe/static/css/main.scss
+++ b/mkstowe/static/css/main.scss
@@ -52,7 +52,7 @@ header {
 
   h1 {
     height: 50%;
-    margin-left: 50px;
+    margin-left: 30px;
   }
 
   a {
@@ -73,8 +73,12 @@ main {
   font-family: $main-font, sans-serif;
   font-size: 18px;
   padding-left: 10px;
-  margin: 0 auto 5%;
+  margin: 0 auto 150px;
   overflow: auto;
+
+  p {
+    line-height: 1.5;
+  }
 
   a {
     color: $accent-color;
@@ -92,6 +96,10 @@ main {
   h4 {
     font-size: 18px;
     font-weight: 400;
+  }
+
+  li {
+    margin-bottom: 3px;
   }
 
   .seg {
@@ -150,11 +158,11 @@ header > .top a.menu_icon:hover i, header > .top a.menu_icon:active i {
 
 // Nav Menu
 .menu {
-  position: absolute;
+  position: fixed;
   z-index: 1;
   top: -110%;
   width: 100%;
-  min-height: calc(100vh - 121px);
+  min-height: 100vh;
   transition: 0.5s all;
   background-color: $white;
   text-transform: uppercase;
@@ -240,15 +248,19 @@ figure {
   padding: 0;
 }
 
-.resume a, .resume a:active {
-  color: $black;
-  background-color: $white;
+#about_me {
+  margin-bottom: 50px;
 }
 
 #resume_link {
-  display: inline;
-  float: right;
+  display: inline-block;
+  margin-right: 5%;
+  margin-top: 50px;
   color: $accent-color;
+}
+
+#resume {
+  display: none;
 }
 
 @media all and (min-width: 480px) {
@@ -393,5 +405,29 @@ figure {
   .media_left {
     float: left;
     margin-right: 30px;
+    margin-top: 10px;
+  }
+
+  #me {
+    width: 35%;
+    margin-top: 75px;
+  }
+
+  #other_info {
+    width: 60%;
+    float: left;
+  }
+
+  #resume {
+    display: block;
+    margin-left: -25px;
+    margin-top: -25px;
+    width: 80%;
+    min-height: 1100px;
+    border: none;
+  }
+
+  #resume_link {
+    float: right;
   }
 }
