--- a/mkstowe/templates/skills.html
+++ b/mkstowe/templates/skills.html
@@ -25,6 +25,7 @@
     </ul>
     <h2>Other Skills</h2>
     <ul>
+        <li>Agile Development</li>
         <li>Problem Solving</li>
         <li>Creativity</li>
         <li>Leadership</li>
