--- a/mkstowe/templates/master.html
+++ b/mkstowe/templates/master.html
@@ -46,7 +46,7 @@
     <h1><a class="title" href="/">Michael Stowe</a></h1>
 
     <div class="top">
-        <a class="menu_icon" href="#"><i class="material-icons">dehaze</i></a>
+        <a class="menu_icon" href="javascript:void(0)"><i class="material-icons">dehaze</i></a>
     </div>
 </header>
 
