--- a/mkstowe/static/css/main.css
+++ b/mkstowe/static/css/main.css
@@ -29,7 +29,7 @@ header h1 {
   margin-left: 30px;
 }
 header a {
-  color: #1155CCFF;
+  color: #1155CC;
   background-color: #FFFFFF;
   text-decoration: none;
 }
@@ -52,7 +52,7 @@ main p {
   line-height: 1.5;
 }
 main a {
-  color: #1155CCFF;
+  color: #1155CC;
   text-decoration: none;
 }
 main h2 {
@@ -113,7 +113,7 @@ header > .top a.menu_icon i {
 }
 
 header > .top a.menu_icon:hover i, header > .top a.menu_icon:active i {
-  color: #1155CCFF;
+  color: #1155CC;
 }
 
 .menu {
@@ -140,17 +140,17 @@ nav a {
   text-decoration: none;
   padding: 6px 8px 6px 16px;
   border-bottom: 3px solid #000000;
-  color: #1155CCFF;
+  color: #1155CC;
 }
 nav a:visited {
   text-decoration: none;
-  color: #1155CCFF;
+  color: #1155CC;
 }
 nav a:hover {
   text-decoration: none;
   color: #FFFFFF;
-  background-color: #1155CCFF;
-  transition: 200ms;
+  background-color: #1155CC;
+  transition: 200ms all;
 }
 nav #socials #email, nav #socials #linkedin {
   color: #000000;
@@ -159,7 +159,7 @@ nav #socials #email, nav #socials #linkedin {
   border: none;
 }
 nav #socials #email:hover, nav #socials #linkedin:hover {
-  color: #1155CCFF;
+  color: #1155CC;
   background-color: #FFFFFF;
 }
 nav #socials #email {
@@ -172,16 +172,16 @@ nav #socials #linkedin {
 }
 nav #socials:link {
   text-decoration: none;
-  color: #1155CCFF;
+  color: #1155CC;
 }
 nav #socials:active {
   text-decoration: none;
   color: #FFFFFF;
-  background-color: #1155CCFF;
+  background-color: #1155CC;
 }
 nav #current {
   color: #FFFFFF;
-  background-color: #1155CCFF;
+  background-color: #1155CC;
 }
 
 figure {
@@ -200,7 +200,7 @@ figure {
   display: inline-block;
   margin-right: 5%;
   margin-top: 50px;
-  color: #1155CCFF;
+  color: #1155CC;
 }
 
 #resume {
