--- a/mkstowe/static/css/start.scss
+++ b/mkstowe/static/css/start.scss
@@ -10,19 +10,16 @@
   font-style: italic;
 }
 
-$accent: #BD9980;
-$white: #DCDCCC;
-$yellow: #f0dfaf;
-
+$accent: #83a598;
+$white: #fbf1c7;
 $bg: #282828;
-$fg: #3f3f3f;
 
 $trans: 200ms all;
 
 body {
   background-color: $bg;
   font-family: DM, monospace;
-  color: $yellow;
+  color: $white;
   transition: $trans;
 }
 
@@ -62,12 +59,12 @@ form input[type="search"] {
   font: inherit;
   margin-left: 25px;
   width: 95%;
-  color: $yellow;
+  color: $white;
   transition: all 0.2s;
 }
 
 form label {
-  color: $yellow;
+  color: $white;
   position: absolute;
   transition: all 0.4s;
 }
@@ -75,7 +72,6 @@ form label {
 form:focus-within input::placeholder {
   opacity: 0;
 }
-
 
 #links_container {
   display: flex;
