--- a/mkstowe/static/css/start.scss
+++ b/mkstowe/static/css/start.scss
@@ -23,33 +23,40 @@ body {
   transition: $trans;
 }
 
-ul {
-  list-style-type: none;
-  text-align: left;
-  padding: 2px 30px 2px 0;
-}
-
 #main_window {
-  margin: 0;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  -ms-transform: translate(-50%, -50%);
-  transform: translate(-50%, -50%);
-  transition: all 0.25s;
+  width: 95%;
+  margin: 0 auto;
 }
 
 #header {
-  margin-bottom: 30px;
+  width: 100%;
+  margin: 0 auto 30px auto;
+
+  h1 {
+    font-weight: bold;
+    font-style: italic;
+  }
+
+  #datetime {
+    width: 100%;
+    font-size: 3vw;
+
+    #time {
+      font-size: 6vw;
+    }
+
+    #date {
+      font-size: 4vw;
+    }
+
+    #sep {
+      display: none;
+    }
+  }
 }
 
-#datetime {
-  font-size: 2vw;
-}
-
-form {
-  margin: 1em 0;
-  position: relative;
+#websearch {
+  width: 10%;
 }
 
 form input[type="search"] {
@@ -58,9 +65,7 @@ form input[type="search"] {
   box-sizing: border-box;
   font: inherit;
   margin-left: 25px;
-  width: 95%;
   color: $white;
-  transition: all 0.2s;
 }
 
 form label {
@@ -76,59 +81,80 @@ form:focus-within input::placeholder {
 #links_container {
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-between;
+  flex-direction: row;
 
-  li, a {
-    padding: 3px 0;
-    color: $white;
-    text-decoration: none;
-    transition: all 0.4s;
-    font-size: 1vw;
-  }
+  .link_block {
+    width: 150px;
+    margin-top: 30px;
+    padding-right: 30px;
 
-  a:hover {
-    color: $accent;
-    transition: $trans;
-  }
-}
+    h3 {
+      color: $accent;
+    }
 
-.subtitle {
-  margin-bottom: 5px;
-  font-weight: bold;
-  color: $accent !important;
-  font-size: 1.2vw !important;
-}
+    a {
+      font-size: min(4vw, 20px);
+      display: inline-block;
+      padding: 3px 0;
+      color: $white;
+      text-decoration: none;
+      transition: $trans;
 
-.title {
-  margin-top: 0;
-  margin-bottom: 10px;
-  font-weight: bold;
-  font-style: italic;
-  font-size: 3vw;
-}
-
-/*
-  Media queries
-*/
-@media (max-width: 950px) {
-
-  .title {
-    font-size: 5vw;
-  }
-
-  #datetime {
-    font-size: 3vw;
-  }
-
-  #links_container {
-    li, a {
-      font-size: 1.5vw;
+      &:hover {
+        color: $accent;
+        transition: $trans;
+      }
     }
   }
 }
 
-//@media (max-width: 650px) {
-//  #main_window {
-//    width: 100%;
-//  }
-//}
+
+/*
+  Media queries
+*/
+@media (min-width: 550px) {
+  #main_window {
+    width: 45%;
+    min-width: 700px;
+    margin: 0 auto;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    -ms-transform: translate(-50%, -60%);
+    transform: translate(-50%, -60%);
+  }
+
+  #header {
+    line-height: 1;
+
+    h1 {
+      font-size: 56px !important;
+      margin: 0 !important;
+    }
+
+    #datetime {
+      #date, #time, #sep {
+        display: inline-block !important;
+        font-size: 32px !important;
+      }
+    }
+  }
+
+  #links_container {
+    justify-content: space-between;
+
+    .link_block {
+      padding: 0;
+
+      h3 {
+        font-size: 24px !important;
+        margin: 0 0 10px 0;
+      }
+
+      a {
+
+        font-size: 18px !important;
+      }
+    }
+  }
+}
