--- a/mkstowe/templates/start.html
+++ b/mkstowe/templates/start.html
@@ -19,27 +19,13 @@
         </div>
     </div>
 
-    <div id="web_search">
-        <form action="https://google.com/search" autocomplete="off" method="GET">
-            <label for="q">></label>
-            <input autofocus
-                   id="q"
-                   name="q"
-                   placeholder="search..."
-                   type="search">
-        </form>
-    </div>
-
-
     <div id="links">
         <div id=links_container>
             <div class="link_block">
                 <h3>Frequent</h3>
                 <div><a href="https://mail.google.com/mail/u/0/?pli=1#inbox" target="_blank">Gmail</a></div>
                 <div><a href="https://www.reddit.com" target="_blank">Reddit</a></div>
-                <div>
-                    <a href="https://www.notion.so/mkstowe/1723590287614bc39e4b02266c9e0e04?v=c780959582f44e6885c14862175d8545"
-                       target="_blank">Notion</a></div>
+                <div><a href="https://www.notion.so/" target="_blank">Notion</a></div>
             </div>
             <div class="link_block">
                 <h3>School</h3>
