Added placeholders for projects Cloud and Variegata

--- a/mkstowe/templates/projects.html
+++ b/mkstowe/templates/projects.html
@@ -1,5 +1,27 @@
 <div id="content">
     <div class="seg">
+        <h2>Project Cloud</h2>
+        <h3>C#, Unity</h3>
+        <h4>In Progress</h4>
+
+        <p>Larger-scale indie video game project produced by WolverineSoft Studios at the University of Michigan.</p>
+
+        <p>Read more about my contributions and get updates on my
+        <a href="/projects/cloud/">Project Cloud blog</a>.</p>
+    </div>
+
+    <div class="seg">
+        <h2>Project Variegata</h2>
+        <h3>C#, Unity</h3>
+        <h4>In Progress</h4>
+
+        <p>Independent research project conducted under Austin Yarger. The goal is to explore how machine learning can
+            be used to create unique narratives in a video game.</p>
+
+        <p>Read more and get updates on my
+        <a href="/projects/variegata/">Project Variegata blog</a>.</p>
+    </div>
+    <div class="seg">
         <h2>Mission O-Possumble</h2>
         <h3>C#, Unity</h3>
 
