--- a/mkstowe/templates/variegata.html
+++ b/mkstowe/templates/variegata.html
@@ -1,7 +1,129 @@
 <div id="content">
     <h2>Project Variegata</h2>
+    <div class="seg">
+        <p>The goal of Project Variegata is to explore ways that machine learning and other programming techniques can
+        be used to create comprehensive and engaging stories to be applied to various types of media (notably video
+        games).</p>
+
+    <p>By automating the process of connecting plot points in different ways on the fly, the consumer can
+        have a compelling story presented to them that continually changes based on their choices. No two paths are
+        necessarily the same.</p>
+    </div>
 
     <div class="seg">
-        <p>Come back later for the first post!</p>
+        <h3 class="blog_date">February 3, 2021</h3>
+        <h4 class="blog_topic"><strong>Stakeholder Information</strong></h4>
+        <p>While any stakeholders in the entertainment industry could benefit from research such as this, I am
+            gearing it more toward video game designers. Video games, often more so than other story-based media,
+            requires a less-than-linear story to be available to the consumer. As a result, designers of these video
+            games would have a greater need for a tool to help keep those stories interesting and engaging for the
+            player.</p>
+        <p>People who love video games, myself included, value an intricate plot that can change depending on the
+            player's choices. This interactivity leads to re-playability, making the game more valuable in the eyes
+            of the customer. Putting funds, designers' knowledge, and ample technology into research to create
+            increasingly intriguing stories benefits all parties involved.</p>
+    </div>
+
+    <div class="seg">
+        <h3 class="blog_date">February 3, 2021</h3>
+        <h4 class="blog_topic"><strong>Market Information</strong></h4>
+        <p>The market sector most closely related to this project would be the Communication Services sector -
+            specifically the Media and Entertainment branch.</p>
+        <p>As of 2018, the Media and Entertainment industry is worth about $703 billion. [<a
+                href="https://investmentbank.com/media-and-entertainment-industry-overview/" target="_blank">source</a>]
+        </p>
+        <p>In October of 2020, this industry had approximately 1.74 million employees. [<a
+                href="https://www.bls.gov/data/" target="_blank">source</a>]</p>
+        <p>The five largest companies in this industry are Comcast, The Walt Disney Co., Charter Communications,
+            ViacomCBS, and Bolloré SA. [<a
+                    href="https://www.investopedia.com/articles/investing/020316/worlds-top-10-entertainment-companies-cmcsa-cbs.asp" target="_blank">source</a>]
+        </p>
+        <p>Some existing products in this industry that could benefit most include video games, movies, TV shows,
+            books, and advertisements.</p>
+    </div>
+
+    <div class="seg">
+        <h3 class="blog_date">February 3, 2021</h3>
+        <h4 class="blog_topic"><strong>Existing Research</strong></h4>
+        <p>The following are some relevant papers from previous research that I hope will guide this project.</p>
+        <ul>
+            <li><a href="https://patents.google.com/patent/US5805784A/en" target="_blank">US5805784A - Computer story
+                generation system and method using network of re-usable substories</a>
+                <p>Patent for a method of generating a story based on smaller substories.</p></li>
+            <li><a href="https://ojs.aaai.org/index.php/AAAI/article/view/8649" target="_blank">Story Generation with
+                Crowdsourced Plot Graphs</a>
+                <p>Generating stories from croudsourced data.</p></li>
+            <li><a href="https://ojs.aaai.org/index.php/AAAI/article/view/5536" target="_blank">A Character-Centric
+                Neural Model for Automated Story Generation</a>
+                <p>Generate stories using predefined character and situations as input.</p></li>
+            <li><a href="https://ojs.aaai.org/index.php/AAAI/article/view/11430" target="_blank">Event
+                Representations for Automated Story Generation with Deep Neural Nets</a>
+                <p>Methods for converting a sentence into a structural story event and vice versa.</p></li>
+            <li><a href="https://www.aclweb.org/anthology/P09-1025.pdf" target="_blank">Learning to Tell Tales: A
+                Data-driven Approach to Story Generation</a>
+                <p>Restructure a story as a tree to make possible story paths more evident.</p></li>
+        </ul>
+
+        <details>
+            <summary>Additionally, here are more papers that didn't quite make the cut.</summary>
+            <ul>
+                <li><a href="https://www.aclweb.org/anthology/P08-1090.pdf" target="_blank">Unsupervised Learning of
+                    Narrative Event Chains</a></li>
+                <li><a href="https://academic.oup.com/jamia/article/20/5/859/727909?login=true"
+                       target="_blank">Combining rules and machine learning for extraction of temporal expressions
+                    and events from clinical narratives</a></li>
+                <li><a href="https://link.springer.com/chapter/10.1007/978-3-030-52237-7_1" target="_blank">Making
+                    Sense of Student Success and Risk Through Unsupervised Machine Learning and Interactive
+                    Storytelling</a></li>
+                <li><a href="https://lirias.kuleuven.be/1656183?limo=0" target="_blank">Machine understanding for
+                    interactive storytelling</a></li>
+                <li><a href="https://dl.acm.org/doi/abs/10.1145/3366424.3383553" target="_blank">Intelligent
+                    Storytelling with Social Data</a></li>
+                <li><a href="https://www.aaai.org/Papers/Workshops/2004/WS-04-04/WS04-04-012.pdf"
+                       target="_blank">Integrated Machine Learning For Behavior Modeling in Video Games</a></li>
+                <li><a href="https://journals.sagepub.com/doi/abs/10.2304/elea.2005.2.1.5" target="_blank">Learning
+                    by Design: Good Video Games as Learning Machines</a></li>
+                <li><a href="https://ieeexplore.ieee.org/abstract/document/7366548" target="_blank">Review of the Use
+                    of AI Techniques in Serious Games: Decision Making and Machine Learning</a></li>
+                <li><a href="https://ieeexplore.ieee.org/abstract/document/8632747" target="_blank">Deep Learning for
+                    Video Game Playing</a></li>
+                <li><a href="https://ojs.aaai.org/index.php/AIIDE/article/view/13021" target="_blank">Predicting
+                    Generated Story Quality with Quantitative Measures</a></li>
+                <li><a href="https://dl.acm.org/doi/abs/10.1145/3290607.3312965" target="_blank">On How Users Edit
+                    Computer-Generated Visual Stories</a></li>
+                <li><a href="https://www.sciencedirect.com/science/article/abs/pii/S0749597884710247"
+                       target="_blank">Idea Generation in Computer-Based Groups: A New Ending to an Old Story</a></li>
+                <li><a href="https://link.springer.com/chapter/10.1007/11590323_32" target="_blank">Getting the Story
+                    Right: Making Computer-Generated Stories More Entertaining</a></li>
+                <li><a href="https://patents.google.com/patent/US20080250070A1/en" target="_blank">Creating a report
+                    having computer generated narrative text </a></li>
+                <li><a href="https://link.springer.com/article/10.1007/s11023-010-9209-8" target="_blank">Assessing
+                    the Novelty of Computer-Generated Narratives Using Empirical Metrics</a></li>
+                <li><a href="http://ilitia.cua.uam.mx:8080/jspui/handle/123456789/622" target="_blank">A system for
+                    evaluating novelty in computer generated narratives</a></li>
+                <li><a href="http://citeseerx.ist.psu.edu/viewdoc/download?doi=10.1.1.294.3949&rep=rep1&type=pdf#page=111" target="_blank">Illustrating a Computer Generated Narrative</a></li>
+                <li><a href="https://essay.utwente.nl/56948/" target="_blank">The Plot Thickens : bringing structure
+                    and meaning into automated story generation</a></li>
+                <li><a href="https://people.ict.usc.edu/gordon/public_html/publications/KDD-WS17.PDF"
+                       target="_blank">Evaluating Story Generation Systems Using AutomatedLinguistic Analyses</a></li>
+                <li><a href="https://patents.google.com/patent/US9161007B2/en" target="_blank">Automated story
+                    generation</a></li>
+                <li><a href="https://ieeexplore.ieee.org/abstract/document/6032009" target="_blank">Automated story
+                    generation with multiple internal focalization</a></li>
+                <li><a href="https://ojs.aaai.org/index.php/AIIDE/article/view/13003" target="_blank">Toward
+                    Automated Story Generation with Markov Chain Monte Carlo Methods and Deep Neural Networks</a></li>
+                <li><a href="https://patents.google.com/patent/US8422852B2/en" target="_blank">Automated story
+                    generation</a></li>
+                <li><a href="https://arxiv.org/abs/1902.01109" target="_blank">Strategies for Structuring Story
+                    Generation</a></li>
+                <li><a href="https://arxiv.org/abs/1805.04833" target="_blank">Hierarchical Neural Story
+                    Generation</a></li>
+                <li><a href="https://www.aclweb.org/anthology/W18-1505.pdf" target="_blank">Towards Controllable
+                    Story Generation</a></li>
+                <li><a href="https://arxiv.org/abs/1707.05501" target="_blank">Story Generation from Sequence of
+                    Independent Short Descriptions</a></li>
+            </ul>
+        </details>
+
     </div>
 </div>
